# Skeleton

./: CMakeLists.txt
cmake/: utility.cmake
include/: SkeletonDefs.h
include/SkeletonCore/: Aliases.h  ApplicationBase.h  ApplicationBaseCli.h  ApplicationBaseGui.h  Initialisation.h  Logging.h
include/SkeletonCore/Event/: Observer.h  Signal.h  SignalFunc.h  SignalPolicy.h
include/SkeletonImGui/: ApplicationBaseImGui.h
include/SkeletonPerf/: SimpleBench.h
src/: CMakeLists.txt
src/SkeletonCore/: ApplicationBase.cpp  ApplicationBaseGui.cpp  CMakeLists.txt  Logging.cpp
src/SkeletonImGui/: ApplicationBaseImGui.cpp  CMakeLists.txt
src/SkeletonOS/: CMakeLists.txt
